started full fronted implementation

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,8 +3,9 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "editorconfig.editorconfig",
-    "vue.volar",
-    "wayou.vscode-todo-highlight"
+    "wayou.vscode-todo-highlight",
+    "easycodeai.copilot-chatgpt-vscode",
+    "sourcegraph.cody-ai"
   ],
   "unwantedRecommendations": [
     "octref.vetur",
