--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "@vueuse/core": "^10.6.1",
+    "apexcharts": "^3.45.1",
     "axios": "^1.2.1",
     "class-validator": "^0.14.0",
     "localforage": "^1.10.0",
@@ -22,7 +23,8 @@
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vue3-apexcharts": "^1.4.4"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
