--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
-    "build": "quasar build"
+    "dev": "yarn global add @quasar/cli && quasar dev",
+    "build": "yarn global add @quasar/cli && quasar build"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
