--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+quasar.log
 
 # Editor directories and files
 .idea
@@ -36,8 +37,8 @@ yarn-error.log*
 *.sln
 
 # local .env files
-.env.local*
 .env
+.env.local*
 
 # vscode
 .vscode/
