--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
-    "build": "quasar build"
+    "build": "quasar build",
+    "serve": "node server.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
@@ -18,6 +19,8 @@
     "apexcharts": "^3.45.1",
     "axios": "^1.2.1",
     "class-validator": "^0.14.0",
+    "connect-history-api-fallback": "^2.0.0",
+    "express": "^4.19.2",
     "localforage": "^1.10.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
