implemented fixes for dashboard chart - now shows the trend for payments and billing, fixed payment table getting cut-off when rows exceed below the screen, added filter functionality to payment table - payment table can now filter to return payments for each individual, made generatate/print billing form select searchable

--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@types/chart.js": "^2.9.41",
     "@vueuse/core": "^10.6.1",
     "apexcharts": "^3.45.1",
     "axios": "^1.2.1",
+    "chart.js": "^4.4.6",
     "class-validator": "^0.14.0",
     "connect-history-api-fallback": "^2.0.0",
+    "date-fns": "^4.1.0",
     "express": "^4.19.2",
     "localforage": "^1.10.0",
     "pinia": "^2.0.11",
