implemented landing page for waste pro

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lawma-app-frontend",
   "version": "0.0.1",
-  "description": "Lawma App Project",
+  "description": "Waste Pro Project",
   "productName": "lawma_app_frontend",
   "author": "AkoniHakeem <akozymayor@gmail.com>",
   "private": true,
